<resources>
    <string name="activity_training_history_name">История тренировок</string>
    <string name="activity_training_statistics_name">Статистика тренировки</string>
    <string name="first_training">Первая тренировка</string>
    <string name="second_training">Вторая тренировка</string>
    <string name="activity_training_name">Тренировка</string>
    <string name="time_left">осталось времени</string>
    <string name="next">Следующий</string>
    <string name="stop">Закончить</string>
    <string name="activity_start_page_name">Начальная страница</string>
    <string name="activity_create_presentation_name">Добавление презентации</string>
    <string name="activity_edit_presentation_name">Добавление новой презентации</string>
    <string name="time_limit">Ограничение времени на доклад (минут)</string>
    <string name="notifications">Уведомления</string>
    <string name="presentation_date">Дата доклада</string>
    <string name="share">Поделиться</string>
    <string name="activity_train_name">Тренироваться</string>
    <string name="check_text">Check Presentation Text</string>
    <string name="add_presentation">Добавить презентацию</string>
    <string name="enter_presentation_name">Название презентации</string>
    <string name="presentation_file_replacement">Изменить файл\nпрезентации</string>
    <string name="activity_presentation_name">Презентация</string>
    <string name="activity_preference">Настройки</string>
    <string name="first_presentation">Презентация 1</string>
    <string name="second_presentation">Презентация 2</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="select_a_file">Выберите файл</string>
    <string name="back_to_main">На главную</string>
    <string name="no_internet_connection">Отсутствует соединение с интернетом</string>
    <string name="export_statistics">Экспорт статистики</string>
    <string name="improve_mark">Как улучшить оценку?</string>
    <string name="recommendation_key">recommendation</string>
    <string name="recommendation_speed_with_error">Скорость демонстрации слайдов вашей презентации существенно отличается от рекомендуемой. Попробуйте %1$s время отображения слайдов.</string>
    <string name="recommendation_speed_without_error">Cкорость демонстрации слайдов %1$s</string>
    <string name="recommendation_speed_increase_info">существенно выше рекомендуемого значения. Рекомендуется увеличить время отображения указанных слайдов.</string>
    <string name="recommendation_speed_decrease_info">существенно ниже рекомендуемого значение. Рекомендуется уменьшить время отображения указанных слайдов.</string>
    <string name="performance_recommendations">Рекомендации к выступлению</string>
    <string name="slide_time">Время слайдов</string>
    <string name="slides_time_recommendation">Рекомендации по времени слайдов - заглушка"</string>
    <string name="slides_frequency">Частота слайдов</string>
    <string name="slides_frequency_recommendation">Рекомендации по частоте слов - заглушка</string>
    <string name="scum_words_label">Слова паразиты</string>
    <string name="scum_words_recommendation">Рекомендации по словам-паразитам - заглушка</string>
    <string name="back_to_statistics">Назад к статистике</string>
    <string name="to_home_screen">На главную</string>
    <string name="the_next">Следующий</string>
    <string name="average_speed">Средняя скорость: </string>
    <string name="best_slide">Лучший слайд: </string>
    <string name="worst_slide">Худший слайд: </string>
    <string name="speech_speed_units">слов/мин</string>
    <string name="training_time">Время тренировки:</string>
    <string name="count_of_slides">Слайдов рассказано:</string>
    <string name="word_share_of_parasites">Доля слов паразитов:</string>
    <string name="percent">%</string>
    <string name="zero_sec">00 min: 00 sec</string>
    <string name="first_sec">00 min: 01 sec</string>
    <string name="pref_header_general">Основные</string>
    <string name="pref_title_enable_statistics">Включить анализ статистики</string>
    <string name="pref_description_enable_statistics">Отображение графиков после выступления
    </string>
    <string name="pref_title_enable_deb_pres">Включить тестовые презентации</string>
    <string name="deb_speech_audio_key">deb_speech_audio</string>
    <string name="notifications_key">notifications_new_message</string>
    <string name="speed_key">speed_key</string>
    <string name="pref_title_enable_deb_speech_audio">Включить тестовую звуковую дорожку</string>
    <string name="deb_pres">Отладочная презентация</string>
    <string name="deb_pres_name">making_presentation.pdf</string>
    <string name="first_debug_presentation_name">making_first_presentation</string>
    <string name="second_debug_presentation_name">making_second_presentation</string>
    <string name="set_number_into_NP">Set the passed number into the NumberPicker</string>
    <string name="first_debug_time">01 min: 00 sec</string>
    <string name="second_debug_time">02 min: 00 sec</string>
    <string name="edit">"Редактировать"</string>
    <string name="making_presentation">making_presentation</string>
    <string name="pdf_format">.pdf</string>
    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Желательный темп речи</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Уведомления</string>
    <string name="pref_header_deb_mode">Режим отладки</string>
    <string name="pref_title_new_message_notifications">Напоминание о тренировках</string>
    <string name="pref_title_ringtone">Рингтон</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Вибрация</string>
    <string name="notification_channel_name">Напоминания о тренировках</string>
    <string name="message_enable_notifications">Необходимо включить уведомления в настройках</string>
    <string name="notifications_title">Вы давно не тренировались</string>
    <string name="notifications_text">Нажмите, чтобы перейти к тренировкам</string>
    <string name="words_count">Количество слов в минуту</string>
    <string name="slide_number">Номер слайда</string>
    <string name="name_of_presentation">Название презентации</string>
    <string name="min_per_sec">min:sec</string>
    <string name="training_completed">Тренировка завершена</string>
    <string name="training_statistics">Статистика тренировки</string>
    <string name="return_training">Повторить тренировку</string>
    <string name="message_no_presentation_name">Пожалуйста, введите имя презентации</string>
    <string name="DEBUG_SLIDES">debug_slides</string>
    <string name="audio_recording">audio recording</string>
    <string name="presentationEntries">presentationEntries</string>
    <string name="speech_speed">Комфортная скорость речи, слов в минуту</string>
    <string name="pref_default_speed">120</string>
    <string name="maximum_mark_for_training">(100)</string>
    <string name="start_recording">Начать тренировку</string>
    <string name="stop_recording">Закончить тренировку</string>
    <string name="voice_analysis_instructions">После нажатия кнопки \"Начать тренировку\" подождите,
        пока остановится обратный отсчёт, и начните говорить после этого.\n\n
        После нажатия кнопки \"Закончить тренировку\" будет произведён анализ звуковой дорожки,
        результаты которого выведутся в этом текстовом поле.\n\n
        Минимизируйте уровень шума в помещении для повышения точности результатов анализа.
    </string>
    <string name="settings">Настройки</string>
    <string name="voice_analysis">Анализ речи</string>
    <string name="video_instruction">Видеоинструкция</string>
    <string name="feedback">Обратная связь</string>
    <string name="countdown_volume_levels">Уровни громкости при обратном отсчёте</string>
    <string name="maximal">Максимальный</string>
    <string name="minimal">Минимальный</string>
    <string name="average">Средний</string>
    <string name="speech_volume_levels">Уровни громкости во время тренировки</string>
    <string name="silence_and_speech_time">Объём пауз и голоса</string>
    <string name="pauses">Паузы</string>
    <string name="voice">Голос</string>
    <string name="duration">Длительность записи</string>
    <string name="breakdown_by_slide">Информация по слайдам</string>
    <string name="slide">Слайд</string>
    <string name="silence_percentage_on_slide">Суммарная доля пауз</string>
    <string name="average_pause_length">Средняя длина паузы</string>
    <string name="long_pauses_amount">Количество пауз с длиной выше средней</string>
    <string name="seconds">сек.</string>
    <string name="noisy_room">Перейдите в менее шумное помещение.</string>
    <string name="speak_louder">Попробуйте говорить громче.</string>
    <string name="speak_slower">Попробуйте говорить медленнее.</string>
    <string name="speak_faster">Попробуйте говорить быстрее.</string>
    <string name="revise_text">Повторите текст Вашего выступления.</string>
    <string name="revise_text_recommendation">Возможно, стоит повторить текст выступления.</string>
    <string name="too_much_pauses">Вы делаете очень много пауз.</string>
    <string name="overly_many_pauses">Вы делаете слишком много пауз.</string>
    <string name="not_enough_pauses">Вы делаете недостаточно много пауз.</string>
    <string name="start_speaking">Начинайте говорить.</string>
    <string name="quiet_speech">Вы говорите тихо.</string>
    <string name="overly_quiet_speech">Вы говорите слишком тихо.</string>
    <string name="good_volume">Вы достаточно громко говорите; отлично!</string>
    <string name="good_speech">Вы делаете достаточное количество пауз; отлично!</string>
    <string name="CURRENT_PRESENTATION_ID">current_presentation_id</string>
    <string name="NEW_PRESENTATION_URI">new_presentation_uri</string>
    <string name="CHANGE_FILE_FLAG">change_file_flag</string>
    <string name="CURRENT_TRAINING_ID">current_training_id</string>
    <string name="changePresentationFlag">change_presentation_flag</string>
    <string name="further">Далее</string>
    <string name="save">Сохранить</string>
    <string name="change_presentation_task">"Редактировать презентацию "</string>
    <string name="change">"Редактировать"</string>
    <string name="no">"Нет"</string>
    <string name="remove">"Удалить"</string>
    <string name="leave">"Оставить"</string>
    <string name="request_for_remove_presentation">"Вы действительно хотите удалить презентацию "</string>
    <string name="about">О программе</string>
    <string name="app_name">Тренажер Публичных Выступлений</string>
    <string name="version">Версия</string>
    <string name="developers">Разработчики:</string>
    <string name="licenses">Лицензии</string>
    <string name="repositoryLink">Ссылка на репозиторий</string>
    <string name="authors">Евгений Моторин\nМихаил Дементьев\nДмитрий Путьков\nДарья Шаркова\nКирилл Хохлов\nВладимир Андросов\nМарк Заславский</string>
    <string name="about_text">Приложение позволяет совершенствовать ораторские навыки при подготовке к публичным выступлениям с использованием мультимедиа презентаций в формате PDF, следить за прогрессом и делится достижениями в социальных сетях.</string>
    <string name="pref_description_statistics_collection">Статистика неоходима в научных целях</string>
    <string name="pref_title_statistics_collection">Сбор статистики тренировок</string>
    <string name="training_path">Записи тренировок</string>
    <string name="drive_folder_to_save">Папка для сохранения на Google-диск</string>
    <string name="drive_folder_key">drive_folder_key</string>
</resources>