<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_enable_statistics"
        android:title="@string/pref_title_enable_statistics" />

    <SwitchPreference
        android:key="statistics_collection"
        android:summary="@string/pref_description_statistics_collection"
        android:title="@string/pref_title_statistics_collection" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:layout_width="match_parent"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_speed"
        android:inputType="number"
        android:key="@string/speed_key"
        android:maxLines="1"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/speech_speed" />

    <EditTextPreference
        android:defaultValue="root"
        android:inputType="text"
        android:key="@string/drive_folder_key"
        android:title="@string/drive_folder_to_save" />



</PreferenceScreen>
