<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_voice_analysis"
        android:orderInCategory="2"
        android:title="@string/voice_analysis" />
    <item
        android:id="@+id/action_video_instruction"
        android:orderInCategory="3"
        android:title="@string/video_instruction" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="4"
        android:title="@string/feedback" />
    <item
        android:id="@+id/about"
        android:orderInCategory="5"
        android:title="@string/about" />
    <item
        android:id="@+id/audio_folder"
        android:orderInCategory="5"
        android:title="@string/training_path" />
</menu>