<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ru.spb.speech.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="ru.spb.speech.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="ru.spb.speech.SettingsActivity$DebModePreferenceFragment"
        android:icon="@drawable/ic_debug_mode_black_24dp"
        android:title="@string/pref_header_deb_mode" />

</preference-headers>
