<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresentationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        >

        <TextView
            android:id="@+id/presentationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/name_of_presentation"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#008000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <FrameLayout
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="50dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:background="@drawable/custom_rectangle"
                android:focusableInTouchMode="true">

                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_limit"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/trainingTime"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:inputType="time"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:hint="@string/min_per_sec" />

            </FrameLayout>

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share" />

            <Button
                android:id="@+id/trainingHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_training_history_name" />

            <Button
                android:id="@+id/training"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_train_name" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>