<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view_recommendation"
    tools:context=".RecommendationActivity">

    <ScrollView
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recommendationScroll"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recommendationLabel"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/performance_recommendations"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/slidesTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/slide_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/slidesTimeRecommendation"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/slides_time_recommendation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/slidesFrequency"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/slides_frequency"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/slidesFrequencyRecommendation"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/slides_frequency_recommendation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/scumWordsLabel"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/scum_words_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/scumWordsRecommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/scum_words_recommendation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/backToStatistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:foreground="@drawable/card_foreground"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/back_to_statistics"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:id="@+id/toHomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/card_foreground"
                android:layout_marginHorizontal="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="2dp" >

                <TextView
                    android:layout_marginVertical="10dp"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:textColor="@android:color/white"
                    android:text="@string/to_home_screen"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>