<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceAnalysisActivity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/start_recording_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="34dp"
        android:text="@string/start_recording"
        app:layout_constraintBottom_toTopOf="@+id/voice_analysis_text_view"
        app:layout_constraintEnd_toStartOf="@+id/stop_recording_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop_recording_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="34dp"
        android:text="@string/stop_recording"
        app:layout_constraintBottom_toTopOf="@+id/voice_analysis_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_recording_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/voice_analysis_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="83dp"
        android:text="@string/voice_analysis_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_recording_button" />

    <Button
        android:id="@+id/next_slide_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:gravity="center_horizontal"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voice_analysis_text_view" />

</android.support.constraint.ConstraintLayout>